--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "big-integer": "^1.6.44",
-    "restify": "^8.3.3"
+    "restify": "^8.3.3",
+    "restify-cors-middleware": "^1.1.1"
   },
   "devDependencies": {
     "mocha": "^6.1.4",
